--- a/colladd.html
+++ b/colladd.html
@@ -16,6 +16,7 @@
 		<link href="zlys/css/iconfont/Rjdaoico.css" rel="stylesheet" type="text/css">
 		
 		<script type="text/javascript" src="js/common.js"></script>
+		<script src="js/mui.min.js"></script>
 
 	</head>
 	<body>
