--- a/index.html
+++ b/index.html
@@ -1,99 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title></title>
-	<link rel="stylesheet" href="index/css/ui.css">
-	<!-- zlys -->
-	<script type="text/javascript" src="js/zlys.js"></script>
-	<script type="text/javascript" src="js/layer.js"></script>
-	<link rel="stylesheet" href="css/layer.css" />
-</head>
-<body class="android">
-	<div class="content" style="/*box-shadow: rgba(0, 0, 0, .50) 0 0 10px;transform: translate(50%, 0px);*/">
-		<div class="scroll-content dwz-scroll" >
-			<div class="scroll">
-				<div class="m-panel">
-					<div class="panel-header">
-						<label class="panel-title" style="margin-left: 43%;">中科绵投</label>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<title></title>
+		<link rel="stylesheet" href="index/css/ui.css">
+		<!-- zlys -->
+		<script type="text/javascript" src="js/zlys.js"></script>
+		<script type="text/javascript" src="js/layer.js"></script>
+		<link rel="stylesheet" href="css/layer.css" />
+		<script type="text/javascript" src="js/jquery_1.9.js"> </script>
+	</head>
+	<body class="android">
+		<div class="content" style="/*box-shadow: rgba(0, 0, 0, .50) 0 0 10px;transform: translate(50%, 0px);*/">
+			<div class="scroll-content dwz-scroll">
+				<div class="scroll">
+					<div class="my-info">
+						<div class="my-info-background" style="background-color:#3490dc; -webkit-filter:blur(0px);min-height:220px"></div>
+						<img class="my-avatar" src="zlys/images/car.ico">
+						<span class="name" id="name">中科绵投司机平台</span>
 					</div>
-					<div class="panel-content">
-						<div class="grids-contant">
-							<a class="grids-grid"  href="javascript:void(0);" onclick="colladd()">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-12.png" alt=""></div>
-								<p class="grids-grid-label">收运登记</p>
-							</a>
-							<a class="grids-grid" href="service_rescue.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-11.png" alt=""></div>
-								<p class="grids-grid-label">紧急救援</p>
-							</a>
-							<a class="grids-grid"  rel="service_violation" href="service_violation.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-10.png" alt=""></div>
-								<p class="grids-grid-label">违章代缴</p>
-							</a>
-							<a class="grids-grid" href="my-featured.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-9.png" alt=""></div>
-								<p class="grids-grid-label">推荐购车</p>
-							</a>
-							<a class="grids-grid" href="service_appoin.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-8.png" alt=""></div>
-								<p class="grids-grid-label">预约维修</p>
-							</a>
-							<a class="grids-grid" href="service-dealers.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-7.png" alt=""></div>
-								<p class="grids-grid-label">经销商查询</p>
-							</a>
-							<a class="grids-grid" href="anti-fake.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-s-17.png" alt=""></div><!-- 更换图标  -->
-								<p class="grids-grid-label">配件防伪</p>
-							</a>
-							<a class="grids-grid" href="service_insurance.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-5.png" alt=""></div>
-								<p class="grids-grid-label">保险服务</p>
-							</a>
-							<a class="grids-grid" href="service_traffic.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-4.png" alt=""></div>
-								<p class="grids-grid-label">限行查询</p>
-							</a>
-							<a class="grids-grid" href="service_financial.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-3.png" alt=""></div>
-								<p class="grids-grid-label">金融服务</p>
-							</a>
-							<a class="grids-grid" href="gas-station.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-2.png" alt=""></div>
-								<p class="grids-grid-label">附近加油站</p>
-							</a>
-							<a class="grids-grid" href="gas-station.html">
-								<div class="grids-grid-icon"><img src="index/images/icon-png/icon-y-1.png" alt=""></div>
-								<p class="grids-grid-label">购车计算</p>
-							</a>
+					<div class="m-panel">
+						<div class="panel-content">
+							<div class="grids-contant">
+								<a class="grids-grid" href="javascript:;" onclick="person()">
+									<div class="grids-grid-icon"><img src="images/mycenter.png" alt=""></div>
+									<p class="grids-grid-label">司机信息</p>
+								</a>
+								<a class="grids-grid" href="javascript:void(0);" onclick="add()">
+									<div class="grids-grid-icon"><img src="images/dengji.png" alt=""></div>
+									<p class="grids-grid-label">收运登记</p>
+								</a>
+								<a class="grids-grid" href="javascript:;" onclick="mycar()">
+									<div class="grids-grid-icon"><img src="images/mycar.png" alt=""></div>
+									<p class="grids-grid-label">车辆信息</p>
+								</a>
+								<a class="grids-grid" href="my-featured.html">
+									<div class="grids-grid-icon"><img src="images/yujing.png" alt=""></div>
+									<p class="grids-grid-label">当日预警</p>
+								</a>
+								<a class="grids-grid" href="service_appoin.html">
+									<div class="grids-grid-icon"><img src="images/tongji.png" alt=""></div>
+									<p class="grids-grid-label">违规统计</p>
+								</a>
+								<a class="grids-grid" href="service-dealers.html">
+									<div class="grids-grid-icon"><img src="images/sytj.png" alt=""></div>
+									<p class="grids-grid-label">收运统计</p>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-
-	</div>
-	<!-- <div class="tab-bar tab-bottom">
-		<a class="tab-button " href="index.html"><i class="tab-button-icon icon icon-home"></i><span class="tab-button-txt">首页</span></a>
-		<a class="tab-button " href="forum.html"><i class="tab-button-icon icon icon-exhibition" style="background-size:30px"></i><span class="tab-button-txt">论坛</span></a>
-		<a class="tab-button " href="my-favorite.html"><i class="tab-button-icon icon icon-car"></i><span class="tab-button-txt">找车</span></a>
-		<a class="tab-button active" href="service-list.html"><i class="tab-button-icon icon icon-service"></i><span class="tab-button-txt">服务</span></a>
-		<a class="tab-button " href="my.html"><i class="tab-button-icon icon icon-my"></i><span class="tab-button-txt">我的</span></a>
-	</div> -->
-	<div class="tab-bar tab-bottom">
-		<a class="tab-button active" href="javascript:void(0);" onclick="index()"><i class="tab-button-icon icon icon-home"></i><span class="tab-button-txt">首页</span></a>
-		<a class="tab-button " href="forum.html"><i class="tab-button-icon icon icon-exhibition" style="background-size:30px"></i><span class="tab-button-txt">论坛</span></a>
-		<a class="tab-button " href="my-favorite.html"><i class="tab-button-icon icon icon-car"></i><span class="tab-button-txt">找车</span></a>
-		<a class="tab-button " href="javascript:void(0);" onclick="my()"><i class="tab-button-icon icon icon-my"></i><span class="tab-button-txt">我的</span></a>
-	</div>
-</body>
-<script>
-	function colladd(){
-		muiHref("colladd.html");
-	}
-</script>
-<script>
-</script>
+		<div class="tab-bar tab-bottom">
+			<a class="tab-button active" href="javascript:void(0);" onclick="index()"><i class="tab-button-icon icon icon-home"></i><span
+				 class="tab-button-txt">首页</span></a>
+			<a class="tab-button" href="forum.html"><i class="tab-button-icon icon icon-tz" style="background-size:25px"></i><span
+				 class="tab-button-txt">通知</span></a>
+			<a class="tab-button " href="my-favorite.html"><i class="tab-button-icon icon icon-car"></i><span class="tab-button-txt">找车</span></a>
+			<a class="tab-button " href="javascript:void(0);" onclick="my()"><i class="tab-button-icon icon icon-my"></i><span
+				 class="tab-button-txt">我的</span></a>
+		</div>
+	</body>
 </html>
