--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
 	</head>
 	<body>
 		<div class="log-logo">
-			<img src="zlys/images/car.png" width="80" height="80">
+			<img src="zlys/images/driver.ico" width="80" height="80">
 		</div>
 		<div class="aui-code-box">
 			<div class="aui-code-line">
