--- a/my.html
+++ b/my.html
@@ -1,158 +1,112 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<title>童长东后台</title>
-		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<link rel="stylesheet" href="zlys/css/style.css" />
-		<link rel="stylesheet" href="zlys/css/index.css" />
-		<link href="zlys/css/iconfont/Rjdaoico.css" rel="stylesheet" type="text/css">
-		<script type="text/javascript" src="js/jquery_1.9.js"> </script>
-		<script type="text/javascript" src="zlys/js/slider.js"></script>
-		<script type="text/javascript" src="zlys/js/jquery.countUp.js"></script>
-		<link rel="stylesheet" type="text/css" href="zlys/css/swiper.min.css" />
-		<script type="text/javascript" src="zlys/js/swiper.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/mui.min.css" />
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<title></title>
+		<link rel="stylesheet" href="index/css/ui.css">
 		<!-- zlys -->
 		<script type="text/javascript" src="js/zlys.js"></script>
-		<script src="js/mui.min.js"></script>
 		<script type="text/javascript" src="js/layer.js"></script>
 		<link rel="stylesheet" href="css/layer.css" />
-		
-		<link rel="stylesheet" href="index/css/ui.css">
-
+		<script type="text/javascript" src="js/jquery_1.9.js"> </script>
 	</head>
-	<body>
-		<!---头部 开始 --->
-		<div class="ui-header">
-			<div class="infostrip">
-				<div class="bw">
-					<!-- <a href="user_setup.html" class="r"><i class="icon-e914"></i></a> -->
+	
+	<body class="android">
+		<div class="scroll-content">
+			<div class="scroll">
+				<div class="my-info" style="margin-top: -160px;">
+					<div class="my-info-background" style="background-color:#3490dc; -webkit-filter:blur(0px)"></div>
+					<span class="my-vip" style="background:none;font-weight: bolder;">个人中心</span>
 				</div>
+				<div>
+					<div class="aui-list-cells">
+						<a href="javascript:;" class="aui-list-cell" onclick="person()">
+							<div class="aui-list-cell-fl"><img src="zlys/images/gr.png"></div>
+							<div class="aui-list-cell-cn">我的信息</div>
+							<div class="aui-list-cell-fr" id="name"></div>
+						</a>
+						<a href="javascript:;" class="aui-list-cell" onclick="mycar()">
+							<div class="aui-list-cell-fl"><img src="zlys/images/mycar.png"></div>
+							<div class="aui-list-cell-cn">车辆信息</div>
+							<div class="aui-list-cell-fr" id="car"></div>
+						</a>
+						<a href="javascript:;" class="aui-list-cell">
+							<div class="aui-list-cell-fl"><img src="index/images/icon-png/icon-n-2.png"></div>
+							<div class="aui-list-cell-cn">车辆信息</div>
+							<div class="aui-list-cell-fr">未认证</div>
+						</a>
+						<a href="javascript:;" class="aui-list-cell">
+							<div class="aui-list-cell-fl"><img src="index/images/icon-png/icon-n-3.png"></div>
+							<div class="aui-list-cell-cn">我的订单</div>
+							<div class="aui-list-cell-fr"></div>
+						</a>
+						<a href="javascript:;" class="aui-list-cell">
+							<div class="aui-list-cell-fl"><img src="index/images/icon-png/icon-n-4.png"></div>
+							<div class="aui-list-cell-cn">每日任务</div>
+							<div class="aui-list-cell-fr"></div>
+						</a>
+						<div class="devider b-line"></div>
+						<a href="javascript:;" class="aui-list-cell">
+							<div class="aui-list-cell-fl"><img src="index/images/icon-png/icon-n-5.png"></div>
+							<div class="aui-list-cell-cn">意见反馈</div>
+							<div class="aui-list-cell-fr"></div>
+						</a>
+						<a href="javascript:;" class="aui-list-cell">
+							<div class="aui-list-cell-fl"><img src="index/images/icon-png/icon-n-6.png"></div>
+							<div class="aui-list-cell-cn">点击好评</div>
+							<div class="aui-list-cell-fr"></div>
+						</a>
+						<div class="devider b-line"></div>
+						<a href="javascript:;" class="aui-list-cell">
+							<div class="aui-list-cell-fl"><img src="index/images/icon-png/icon-n-7.png"></div>
+							<div class="aui-list-cell-cn">我的收藏</div>
+							<div class="aui-list-cell-fr"></div>
+						</a>
+						<a href="javascript:;" class="aui-list-cell">
+							<div class="aui-list-cell-fl"><img src="index/images/icon-png/icon-n-8.png"></div>
+							<div class="aui-list-cell-cn">浏览历史</div>
+							<div class="aui-list-cell-fr"></div>
+						</a>
+						<div class="devider b-line"></div>
+
+
+						<div class="devider b-line"></div>
+						<a href="javascript:;" class="aui-list-cell" onclick="loginOut()">
+							<div class="aui-list-cell-fl" style="margin-left: 3px;"><img src="index/images/icon-png/out.png"></div>
+							<div class="aui-list-cell-cn">退出</div>
+							<div class="aui-list-cell-fr"></div>
+						</a>
+						<div class="devider b-line"></div>
+
+					</div>
+				</div>
+
+
 			</div>
-			<div class="userinfo">
-				<a href="" class="portrait"><img src="zlys/images/person.png"></a>
-				<div class="info">
-					<dl style="margin-top:8px;" id="name"><span>姓名：</span></dl>
-					<dl id="phone"><span>绑定手机：</span></dl>
-				</div>
-			</div>
-
-			<div class="userdata">
-				<div class="it" style="width: 200px;"><span>排班时间</span><em id="start"></em></div>
-				<div class="it"><span>当前状态</span><em id="msg"></em></div>
-			</div>
-		</div>
-		<!---头部 结束 --->
-		<div class="user-icolist">
-			<a href="javascript:void(0);" onclick="colladd()" class="item-name">
-				<div class="coml wow lightSpeedIn">
-					<i class="icon-e918 c1"></i>
-					<span>餐厨垃圾登记</span>
-				</div>
-				<div class="comr">
-					<i class="icon-e902"></i>
-				</div>
-			</a>
-			<a href="user_no_workorder.html" class="item-name">
-				<div class="coml wow lightSpeedIn">
-					<i class="icon-e911 c2"></i>
-					<span>未完成工单</span>
-				</div>
-				<div class="comr">
-					<span style="color:#F30;">6</span>
-					<i class="icon-e902"></i>
-				</div>
-			</a>
-			<a href="user_nopay_workorder.html" class="item-name">
-				<div class="coml wow lightSpeedIn">
-					<i class="icon-e910 c3"></i>
-					<span>未结算工单</span>
-				</div>
-				<div class="comr">
-					<span style="color:#F30;">26</span>
-					<i class="icon-e902"></i>
-				</div>
-			</a>
-
-			<a href="user_okpay_workorder.html" class="item-name">
-				<div class="coml wow lightSpeedIn">
-					<i class="icon-e912 c4"></i>
-					<span>已结算工单</span>
-				</div>
-				<div class="comr">
-					<span>167单</span>
-					<i class="icon-e902"></i>
-				</div>
-			</a>
-
-			<a href="user_telbook.html" class="item-name">
-				<div class="coml wow lightSpeedIn">
-					<i class="icon-e915 c9"></i>
-					<span>电话簿</span>
-				</div>
-				<div class="comr">
-					<span>1260个电话记录</span>
-					<i class="icon-e902"></i>
-				</div>
-			</a>
-
-			<a href="javascript:void(0);" onclick="setup()" class="item-name">
-				<div class="coml wow lightSpeedIn">
-					<i class="icon-e914 c8"></i>
-					<span>信息</span>
-				</div>
-				<div class="comr">
-					<span>个人信息</span>
-					<i class="icon-e902"></i>
-				</div>
-			</a>
-
-			<a class="item-name">
-				<div class="coml wow lightSpeedIn">
-					<i class="icon-e90d c2"></i>
-					<span>帮助中心</span>
-				</div>
-				<div class="comr">
-					<i class="icon-e902"></i>
-				</div>
-			</a>
-
-			<a href="user_about.html" class="item-name">
-				<div class="coml wow lightSpeedIn">
-					<i class="icon-e900 c7"></i>
-					<span>关于我们</span>
-				</div>
-				<div class="comr">
-					<span style="color:#F60">在线客服</span>
-					<i class="icon-e902"></i>
-				</div>
-			</a>
 		</div>
 		<div class="tab-bar tab-bottom">
-			<a class="tab-button " href="javascript:void(0);" onclick="index()"><i class="tab-button-icon icon icon-home"></i><span class="tab-button-txt">首页</span></a>
-			<a class="tab-button " href="forum.html"><i class="tab-button-icon icon icon-exhibition" style="background-size:30px"></i><span class="tab-button-txt">论坛</span></a>
+			<a class="tab-button" href="javascript:void(0);" onclick="index()"><i class="tab-button-icon icon icon-home"></i><span
+				 class="tab-button-txt">首页</span></a>
+			<a class="tab-button" href="forum.html"><i class="tab-button-icon icon icon-tz" style="background-size:25px"></i><span
+				 class="tab-button-txt">通知</span></a>
 			<a class="tab-button " href="my-favorite.html"><i class="tab-button-icon icon icon-car"></i><span class="tab-button-txt">找车</span></a>
-			<a class="tab-button active" href="javascript:void(0);" onclick="my()"><i class="tab-button-icon icon icon-my"></i><span class="tab-button-txt">我的</span></a>
+			<a class="tab-button active" href="javascript:void(0);" onclick="my()"><i class="tab-button-icon icon icon-my"></i><span
+				 class="tab-button-txt">我的</span></a>
 		</div>
-		<script>
-			$(function() {
-				$.post(initUrl + "/app/driver/index", {}, function(obj) {
-					if (obj.state == 0) {
-						muiHref("login.html");
-					}
-					$("#name").html("<span>姓名：</span>" + obj.other.name);
-					$("#phone").html("<span>绑定手机：</span>" + obj.other.phone);
-					$("#start").html(obj.other.startTime + "-" + obj.other.endTime);
-					$("#msg").html(obj.msg);
-				})
-			})
-			function setup(){
-				muiHref("setup.html");
-			}
-			function colladd(){
-				muiHref("colladd.html");
-			}
-		</script>
 	</body>
+	<script type="text/javascript" src="js/zlys.js"></script>
+	<script type="text/javascript" src="js/layer.js"></script>
+	<script type="text/javascript" src="js/jquery_1.9.js"> </script>
+	<script>
+		$(document).ready(function() {
+			$.post(initUrl + "/app/driver/index", {}, function(obj) {
+				if (obj.state == 0) {
+					muiHref("login.html");
+				}
+				$("#name").html(obj.other.name);
+				$("#car").html(obj.msg);
+			})
+		})
+	</script>
 </html>
