--- a/scan.html
+++ b/scan.html
@@ -80,7 +80,7 @@
 			.tip {
 				color: #FFFFFF;
 				font-weight: bold;
-				text-shadow: 0px -1px #103E5C;
+				text-shadow: 0px -1px #5f85cf;
 			}
 		</style>
 	</head>
