--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<link rel="stylesheet" href="css/layer.css" />
 		<script type="text/javascript" src="js/jquery_1.9.js"> </script>
 	</head>
-	<body class="android">
+	<body class="android" >
 		<div class="content" style="/*box-shadow: rgba(0, 0, 0, .50) 0 0 10px;transform: translate(50%, 0px);*/">
 			<div class="scroll-content dwz-scroll">
-				<div class="scroll">
+				<div class="scroll" id="all">
 					<div class="my-info">
-						<div class="my-info-background" style="background-color:#3490dc; -webkit-filter:blur(0px);min-height:220px"></div>
-						<img class="my-avatar" src="zlys/images/car.ico">
+						<div class="my-info-background" style="background-color:#5f85cf; -webkit-filter:blur(0px);min-height:220px"></div>
+						<img class="my-avatar" src="zlys/images/driver.ico">
 						<span class="name" id="name">中科绵投司机平台</span>
 					</div>
 					<div class="m-panel">
@@ -47,20 +47,32 @@
 									<div class="grids-grid-icon"><img src="images/sytj.png" alt=""></div>
 									<p class="grids-grid-label">收运统计</p>
 								</a>
+								<a class="grids-grid" href="javascript:;" onclick="bj()">
+									<div class="grids-grid-icon"><img src="images/pf.png" alt=""></div>
+									<p class="grids-grid-label">我的评分</p>
+								</a>
+								<a class="grids-grid" href="javascript:;" onclick="bj()">
+									<div class="grids-grid-icon"><img src="images/bj.png" alt=""></div>
+									<p class="grids-grid-label">平台报警</p>
+								</a>
+								<a class="grids-grid" href="javascript:;" onclick="bz()">
+									<div class="grids-grid-icon"><img src="images/bz.png" alt=""></div>
+									<p class="grids-grid-label">使用帮助</p>
+								</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="tab-bar tab-bottom">
+		<div class="tab-bar tab-bottom" >
 			<a class="tab-button active" href="javascript:void(0);" onclick="index()"><i class="tab-button-icon icon icon-home"></i><span
 				 class="tab-button-txt">首页</span></a>
 			<a class="tab-button" href="forum.html"><i class="tab-button-icon icon icon-tz" style="background-size:25px"></i><span
 				 class="tab-button-txt">通知</span></a>
-			<a class="tab-button " href="my-favorite.html"><i class="tab-button-icon icon icon-car"></i><span class="tab-button-txt">找车</span></a>
-			<a class="tab-button " href="javascript:void(0);" onclick="my()"><i class="tab-button-icon icon icon-my"></i><span
-				 class="tab-button-txt">我的</span></a>
+			<a class="tab-button " href="my-favorite.html"><i class="tab-button-icon icon icon-car"></i><span class="tab-button-txt">车辆状态</span></a>
+			<a class="tab-button " href="javascript:void(0);" onclick="my()"><i class="tab-button-icon icon icon-sz2" style="background-size:25px"></i><span
+				 class="tab-button-txt">设置</span></a>
 		</div>
 	</body>
 </html>
