--- a/mycar.html
+++ b/mycar.html
@@ -6,10 +6,7 @@
 		<title></title>
 		<link rel="stylesheet" href="index/css/ui.css">
 		<!-- zlys -->
-		<script type="text/javascript" src="js/zlys.js"></script>
-		<script type="text/javascript" src="js/layer.js"></script>
 		<link rel="stylesheet" href="css/layer.css" />
-		<script type="text/javascript" src="js/jquery_1.9.js"> </script>
 	</head>
 	<body class="android">
 		<div class="scroll-content">
@@ -20,69 +17,69 @@
 					</div>
 				</div>
 				<div class="my-info" style="margin-top: -160px;">
-					<div class="my-info-background" style="background-color:#3490dc; -webkit-filter:blur(0px)"></div>
+					<div class="my-info-background" style="background-color:#5f85cf; -webkit-filter:blur(0px)"></div>
 					<span class="my-vip" style="background:none;font-weight: bolder;">我的信息</span>
 				</div>
-				<div>
-					<div class="list">
+				<div >
+					<div class="list" id="my">
 						<div class="item">
 							<div class="item-content">
 								<label class="name">车牌号:</label>
-								<input class="input" type="text" disabled="disabled" id="plateNumber">
+								<input class="input" type="text" disabled="disabled"  v-model="object.other.plateNumber">
 							</div>
 						</div>
 						<div class="item">
 							<div class="item-content">
 								<label class="name">车辆终端号:</label>
-								<input class="input" type="text" disabled="disabled" id="deviceSerial">
+								<input class="input" type="text" disabled="disabled" v-model="object.other.deviceSerial">
 							</div>
 						</div>
 						<div class="item">
 							<div class="item-content">
 								<label class="name">颜色:</label>
-								<input class="input" type="text" disabled="disabled" id="colour">
+								<input class="input" type="text" disabled="disabled" v-model="object.other.colour">
 							</div>
 						</div>
 						<div class="item">
 							<div class="item-content">
 								<label class="name">厂家:</label>
-								<input class="input" type="text" disabled="disabled" id="manufacturer">
+								<input class="input" type="text" disabled="disabled" v-model="object.other.manufacturer">
 							</div>
 						</div>
 						<div class="item">
 							<div class="item-content">
 								<label class="name">型号:</label>
-								<input class="input" type="text" disabled="disabled" id="type">
+								<input class="input" type="text" disabled="disabled" v-model="object.other.type">
 							</div>
 						</div>
 						<div class="item">
 							<div class="item-content">
 								<label class="name">载重量(t):</label>
-								<input class="input" type="text" disabled="disabled" id="loadCapacity">
+								<input class="input" type="text" disabled="disabled" v-model="object.other.loadCapacity">
 							</div>
 						</div>
 						<div class="item">
 							<div class="item-content">
 								<label class="name">车自重:</label>
-								<input class="input" type="text" disabled="disabled" id="weight">
+								<input class="input" type="text" disabled="disabled" v-model="object.other.weight">
 							</div>
 						</div>
 						<div class="item">
 							<div class="item-content">
 								<label class="name">购买时间:</label>
-								<input class="input" type="text" disabled="disabled" id="purchasingDate">
+								<input class="input" type="text" disabled="disabled" v-model="object.other.purchasingDate">
 							</div>
 						</div>
 						<div class="item">
 							<div class="item-content">
 								<label class="name">初始公里:</label>
-								<input class="input" type="text" disabled="disabled" id="initialMileage">
+								<input class="input" type="text" disabled="disabled" v-model="object.other.initialMileage">
 							</div>
 						</div>
 						<div class="item">
 							<div class="item-content">
 								<label class="name">备注信息:</label>
-								<input class="input" type="text" disabled="disabled" id="remark">
+								<input class="input" type="text" disabled="disabled" v-model="object.other.remark">
 							</div>
 						</div>
 					</div>
@@ -91,37 +88,35 @@
 
 			</div>
 		</div>
-		<div class="tab-bar tab-bottom">
+		<div class="tab-bar tab-bottom" >
 			<a class="tab-button" href="javascript:void(0);" onclick="index()"><i class="tab-button-icon icon icon-home"></i><span
 				 class="tab-button-txt">首页</span></a>
-			<a class="tab-button " href="forum.html"><i class="tab-button-icon icon icon-exhibition" style="background-size:30px"></i><span
-				 class="tab-button-txt">论坛</span></a>
-			<a class="tab-button " href="my-favorite.html"><i class="tab-button-icon icon icon-car"></i><span class="tab-button-txt">找车</span></a>
-			<a class="tab-button active" href="javascript:void(0);" onclick="my()"><i class="tab-button-icon icon icon-my"></i><span
-				 class="tab-button-txt">我的</span></a>
+			<a class="tab-button" href="forum.html"><i class="tab-button-icon icon icon-tz" style="background-size:25px"></i><span
+				 class="tab-button-txt">通知</span></a>
+			<a class="tab-button active" href="my-favorite.html"><i class="tab-button-icon icon icon-car"></i><span class="tab-button-txt">车辆状态</span></a>
+			<a class="tab-button " href="javascript:void(0);" onclick="my()"><i class="tab-button-icon icon icon-sz2" style="background-size:25px"></i><span
+				 class="tab-button-txt">设置</span></a>
 		</div>
 	</body>
 	<script type="text/javascript" src="js/zlys.js"></script>
 	<script type="text/javascript" src="js/layer.js"></script>
 	<script type="text/javascript" src="js/jquery_1.9.js"> </script>
+	<script type="text/javascript" src="js/vue.js"> </script>
 	<script>
-		$(function() {
-			$.post(initUrl + "/app/driver/mycar", {}, function(obj) {
-				if (obj.state == 0) {
-					muiHref("login.html");
-				}
-				$("#plateNumber").val(obj.other.plateNumber);
-				$("#deviceSerial").val(obj.other.deviceSerial);
-				$("#colour").val(obj.other.colour);
-				$("#manufacturer").val(obj.other.manufacturer);
-				$("#modelNum").val(obj.other.modelNum);
-				$("#loadCapacity").val(obj.other.loadCapacity);
-				$("#weight").val(obj.other.weight);
-				$("#purchasingDate").val(obj.other.purchasingDate);
-				$("#initialMileage").val(obj.other.initialMileage);
-				$("#remark").val(obj.other.remark);
-				$("#type").val(obj.other.type);
-			})
-		})
+		var my = new Vue({
+			el: '#my',
+			data: {
+				object: [],
+			},
+			created: function() {
+				var self = this;
+				$.post(initUrl + "/app/driver/mycar", {}, function(obj) {
+					if (obj.state == 0) {
+						muiHref("login.html");
+					}
+					self.object = obj;
+				})
+			},
+		});
 	</script>
 </html>
