--- a/user_okpay_workorder_list.html
+++ b/user_okpay_workorder_list.html
@@ -7,14 +7,14 @@
 <meta name="description" content="有爱的" />
 <link rel="icon" href="/favicon.ico" mce_href="/favicon.ico" type="image/x-icon"/>
 <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<link rel="stylesheet" href="css/style.css"/>
-<link rel="stylesheet" href="css/index.css"/>
-<link href="css/iconfont/Rjdaoico.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="zlys/css/style.css"/>
+<link rel="stylesheet" href="zlys/css/index.css"/>
+<link href="zlys/css/iconfont/Rjdaoico.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
-<script type="text/javascript" src="js/slider.js"></script>
+<script type="text/javascript" src="zlys/js/slider.js"></script>
 <!--下拉动画-->
-<link rel="stylesheet" href="css/animate.min.css"/>
-<script type="text/javascript" src="js/wow.min.js"></script>
+<link rel="stylesheet" href="zlys/css/animate.min.css"/>
+<script type="text/javascript" src="zlys/js/wow.min.js"></script>
 <script>
 	if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))){
 		new WOW().init();
